feat(user-notifications): implemented get-my-notifications endpoint
